@@ -1,3 +1,8 @@
+2005-12-07  Martin Hunt  <hunt@redhat.com>
+
+	* translate.cxx (mapvar::fini): Use _stp_pmap_del() on pmaps.
+	(emit_global): For pmaps, use "PMAP" instead of "MAP".
+
 2005-12-06  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 1934.
